# TextFilesWorkExample

./: README.md
TextFilesSample/: CMakeLists.txt  TextSampleFiles.pro  base_operations.c  base_operations.h  examples.c  examples.h  main.c  read_write_operations.c  read_write_operations.h  read_write_operations_struct.c  read_write_operations_struct.h
